# app_fit_evaluation

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
app/: __init__.py  config.py  main.py  models.py  schemas.py
app/agents/: graph_system.py
app/api/: __init__.py  auth.py  chat.py  embeddings.py  evaluations.py
app/middleware/: security.py
app/services/: auth_service.py  checkpointer.py  position_embeddings.py  r2_storage.py
app/tools/: cv_parser.py  email_tools.py  rag_tools.py
client/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/components/: ChatWidget.css  ChatWidget.tsx
client/src/pages/: LandingPage.css  LandingPage.tsx
docker/: 01-init.sql  02-data.sql  MIGRATE.md  backup.sql  postgresql.conf
scripts/: worflow.sql
test/: embeddings.py  upload_r2.py
